2010-10-14  Jia Pu  <jpu@apple.com>

Reviewed by Adele Peterson.

        REGRESSION (r69548): Autocorrections are applied even after typing further characters in the word
        https://bugs.webkit.org/show_bug.cgi?id=47689
        <rdar://problem/8552250>

        The test requires using setTimeout(). So we put it in manual-tests.

        * editing/Editor.cpp:
        (WebCore::Editor::markMisspellingsAfterTypingToPosition): Relpace release() with clear().
        (WebCore::Editor::startCorrectionPanelTimer): Release previously set correction range before
          start timer for next autocorrection check.
        * manual-tests/autocorrection: Added.
        * manual-tests/autocorrection/autocorrection-cancelled-by-typing-1.html: Added.

Canonical link: https://commits.webkit.org/60420@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69841 268f45cc-cd09-0410-ab3c-d52691b4dbfc